--- a/index.html
+++ b/index.html
@@ -10,5 +10,27 @@
 <p>Boop.</p>
 
 <p>We are learning how to do HTML all over again. Oh no.</p>
+
+<h2>Flexbox</h2>
+
+<p>Never learned this so see how it goes.</p>
+
+<div class="flex-container">
+  <div class="item">One</div>
+  <div class="item">Two</div>
+  <div class="item">Three</div>
+
+  <div class="flex-container">
+    <div class="item">Four</div>
+    <div class="item">Five</div>
+    <div class="item">Six</div>
+  </div>
+
+  <div class="flex-container">
+    <div class="item2">Seven</div>
+    <div class="item">Eight</div>
+  </div>
+</div>
+  
 </body>
 </html>
