--- a/index.html
+++ b/index.html
@@ -20,12 +20,14 @@
   <div class="item">Two</div>
   <div class="item">Three</div>
 
+  <br /><br /><!-- Until Raycat can help -->
   <div class="flex-container">
     <div class="item">Four</div>
     <div class="item">Five</div>
     <div class="item">Six</div>
   </div>
 
+  <br /><br /><!-- Until Raycat can help -->
   <div class="flex-container">
     <div class="item2">Seven</div>
     <div class="item">Eight</div>
