--- a/index.html
+++ b/index.html
@@ -11,9 +11,22 @@
 
 <p>We are learning how to do HTML all over again. Oh no.</p>
 
+<h2>Tables in 2024 because idk how to work DIVs as tables.</h2>
+
+  <table class="table-container">
+    <tr>
+      <td class="table-item">About to commit coding sins.</td>
+      <td ckass="table-item">Why am I using tables in 2024??</td>
+    </tr>
+  </table>
+
+<h2>Buttons</h2>
+
 <h2>Flexbox</h2>
 
 <p>Never learned this so see how it goes.</p>
+
+<p>Okay this isn't really going too well so... =.=;</p>
 
 <div class="flex-container">
   <div class="item">One</div>
