--- a/index.html
+++ b/index.html
@@ -16,11 +16,17 @@
   <table class="table-container">
     <tr>
       <td class="table-item">About to commit coding sins.</td>
-      <td ckass="table-item">Why am I using tables in 2024??</td>
+      <td class="table-item">Why am I using tables in 2024??</td>
     </tr>
   </table>
 
 <h2>Buttons</h2>
+
+<p>Not a button, button.</p>
+
+<div class="button">It a div "button".</div>
+
+<button class="button" type="button" onclick="alert('Hello world!')">Click Me!</button>
 
 <h2>Flexbox</h2>
 
