--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 
 <p>We are learning how to do HTML all over again. Oh no.</p>
 
+<h2>Links</h2>
+
+  <ul>
+    <li><a href="http://izagar.net/">Art Portfolio</a></li>
+    <li><a href="http://izagar.net/thisgoesnowhere">A broken link</a></li>
+    <li><a href="https://www.twitch.tv/izagar">My Twitch</a></li>
+  </ul>
+
 <h2>Tables in 2024 because idk how to work DIVs as tables.</h2>
 
   <table class="table-container">
