--- a/index.html
+++ b/index.html
@@ -62,6 +62,31 @@
 </div>
 
 <h2>Flexbox by Raycat</h2>
+
+<div class="main-container">
+  <div class="container1">
+    <div class="box1"></div>
+    <div class="box1">
+      <div class="box2"></div>
+      <div class="box2"></div>
+    </div>
+    <div class="box1"></div>
+  </div>
+  <div class="container2">
+    <div class="box4"></div>
+    <div class="container4">
+      <div class="box5"></div>
+      <div class="box5"></div>
+    </div>
+  </div>
+  <div class="container3">
+    <div class="box1"></div>
+    <div class="box3"></div>
+    <div class="box3"></div>
+    <div class="box1"></div>
+  </div>
+</div>
+  
   
 </body>
 </html>
