--- a/index.html
+++ b/index.html
@@ -36,6 +36,28 @@
 
 <button class="button" type="button" onclick="alert('Hello world!')">Click Me!</button>
 
+<h2>Media and Responsive:</h2>
+
+   <h1>Geeks for Geeks</h1>
+    <p>Responsive div using css.</p>
+    <div class="mnb">
+        <div class="first">
+            <p>First block</p>
+        </div>
+        <div class="second">
+            <p>Second block</p>
+        </div>
+        <div class="third">
+            <p>Third block </p>
+        </div>
+    </div>
+    <p>
+        The media query will only apply
+        if the media type is screen
+        and the viewport is equal to
+        or less than 500px
+    </p>
+  
 <h2>Flexbox by Raycat</h2>
 
 <div class="main-container">
