--- a/playground.html
+++ b/playground.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
-<link rel="stylesheet" type="text/css" href="https://izagar91.github.io/izagar/style.css" />
+<link rel="stylesheet" type="text/css" href="https://izagar91.github.io/izagar/playground-style.css" />
 </head>
 
 <body>
