--- a/playground.html
+++ b/playground.html
@@ -31,6 +31,25 @@
 
 <p>We are learning how to do HTML all over again. Oh no.</p>
 
+  <nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Portfolio</a>
+      <ul>
+        <li><a href="#">Graphic</a></li>
+        <li><a href="#">Web</a></li>
+      </ul>
+    </li>
+    <li><a href="#">Contact</a>
+      <ul>
+        <li><a href="#">Map</a></li>
+        <li><a href="#">Form</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
+
 <h2>Links</h2>
 
   <ul>
