--- a/gaming.html
+++ b/gaming.html
@@ -83,6 +83,45 @@ nav ul li:hover ul {
 <body>
 
 
+
+<nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Nintendo</a></li>
+      <ul>
+        <li><a href="#">Nintendo News</a></li>
+        <li><a href="#">Nintendo Games</a></li>
+      </ul>
+    <li><a href="#">Playstation</a>
+       <ul>
+        <li><a href="#">PlayStation News</a></li>
+        <li><a href="#">Playstation Games</a></li>
+      </ul>
+    <li><a href="#">Xbox</a>
+      <ul>
+        <li><a href="#">Xbox News</a></li>
+        <li><a href="#">Xbox Games</a></li>
+      </ul>
+    <li><a href="#">PC</a>
+      <ul>
+        <li><a href="#">PC News</a></li>
+        <li><a href="#">PC Games</a></li>
+      </ul>
+    <li><a href="#">Reviews</a>
+      <ul>
+        <li><a href="#">Game Reviews</a></li>
+        <li><a href="#">Tech Reviews</a></li>
+      </ul>
+    </li>
+    <li><a href="#">Contact</a>
+      <ul>
+        <li><a href="#">Map</a></li>
+        <li><a href="#">Form</a></li>
+      </ul>
+    </li>
+  </ul>
+</nav>
+
   
 </body>
 </html>
