--- a/gaming.html
+++ b/gaming.html
@@ -161,8 +161,12 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
   </nav>
 
   <div class="content">
-    <div class="content-left"></div>
-    <div class="content-right"></div>
+    <div class="content-left"><p></p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce posuere imperdiet tincidunt. Vivamus et lacus et magna imperdiet maximus. Nullam justo justo, aliquet vel vehicula in, pulvinar non libero. Maecenas nec iaculis nisi. Proin ullamcorper turpis a mi bibendum, quis tincidunt ligula hendrerit. Mauris bibendum vel magna nec aliquet. Donec pulvinar nisl nisl, quis ornare nisl bibendum et. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed justo sapien, malesuada vel tincidunt non, bibendum at mi.</p>
+
+<p>Fusce ac massa facilisis enim sodales facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin vitae feugiat ligula. Fusce nec facilisis turpis. Suspendisse lorem enim, bibendum at libero vel, interdum tempus nisl. Fusce eu ipsum egestas, laoreet lectus ultricies, semper nisl. Cras lorem orci, varius ut arcu vel, sodales varius turpis. Vivamus in quam eu nunc convallis dictum. Etiam sollicitudin tincidunt feugiat. Duis vitae urna convallis, lobortis est at, rhoncus odio. Nulla eu turpis eu enim tincidunt posuere tincidunt at est. Donec laoreet libero ex, quis auctor dolor viverra id. Fusce nulla sapien, congue a quam ac, tincidunt cursus dui. Maecenas vel tortor nisi.</p>
+
+<p>Nunc nibh diam, sodales et tempus in, convallis sit amet odio. Nunc lectus elit, faucibus vitae dapibus molestie, pellentesque varius odio. Praesent maximus, velit in finibus ornare, ipsum dolor placerat tellus, vitae lacinia odio urna et ligula. Proin scelerisque justo ex, sed mattis mi porta in. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vivamus hendrerit pellentesque nibh ac pretium. Curabitur lacus turpis, ornare a nisi at, dapibus interdum ex. Integer lobortis tempor risus et laoreet. Vestibulum ut ante tincidunt, eleifend tellus a, laoreet tellus. Etiam eleifend magna ut quam vestibulum aliquet. Donec at nisi in ex interdum viverra a at nibh. Cras ac augue tellus. Vestibulum eu erat suscipit, venenatis sem at, blandit dolor.</p></div>
+    <div class="content-right"><p>Vivamus sodales, odio in ultricies pretium, nunc risus facilisis orci, id vestibulum metus magna ut ante. Donec condimentum lacus a eros consequat rhoncus. Ut a luctus mauris. Maecenas faucibus odio ac consectetur hendrerit. Maecenas sollicitudin elit sit amet aliquet elementum. Ut sodales pulvinar velit sit amet maximus. Quisque a felis id urna placerat venenatis quis eu lacus. Phasellus eget malesuada ligula. Vestibulum enim risus, luctus at malesuada at, venenatis sed nisi. Nullam posuere ac nisl vel eleifend. Curabitur eget massa quis nulla consequat pellentesque quis eu libero. </p></div>
   </div>
 
 </div>
