--- a/gaming.html
+++ b/gaming.html
@@ -94,8 +94,9 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
     .content{
       background-color:white;
       border:solid 1px gray;
-      width:80%;
+      width:100%;
       margin:auto;
+      display: table-row;
     }
 
     .content-left{
@@ -103,6 +104,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       border:solid 1px gray;
       width:80%;
       margin:auto;
+      display: table-cell;
     }
 
     .content-right{
@@ -110,6 +112,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       border:solid 1px gray;
       width:20%;
       margin:auto;
+      display: table-cell;
     }
 
     
