--- a/gaming.html
+++ b/gaming.html
@@ -96,6 +96,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       border:solid 1px gray;
       width:100%;
       margin:auto;
+      padding:5px;
       display: table-row;
     }
 
@@ -104,6 +105,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       border:solid 1px gray;
       width:80%;
       margin:auto;
+      padding:5px;
       display: table-cell;
     }
 
@@ -112,6 +114,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       border:solid 1px gray;
       width:20%;
       margin:auto;
+      padding:5px;
       display: table-cell;
     }
 
