--- a/gaming.html
+++ b/gaming.html
@@ -137,7 +137,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       display: table-row;
     }
 
-    .content{
+    .news-content{
       background-color:white;
       border:solid 1px gray;
       width:100%;
@@ -145,9 +145,6 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       padding:5px;
       display: table-row;
     }
-
-    
-
     
   </style>
 </head>
