--- a/gaming.html
+++ b/gaming.html
@@ -157,7 +157,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       width:95%;
       margin:auto;
       padding:5px;
-      display: table-cell;
+      display: table;
     }
     
   </style>
