--- a/gaming.html
+++ b/gaming.html
@@ -125,6 +125,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       margin:auto;
       padding:5px;
       display: table;
+      clear:both;
     }
 
     .news-header, .news-footer{
