--- a/gaming.html
+++ b/gaming.html
@@ -123,7 +123,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       border:solid 1px gray;
       width:95%;
       margin:auto;
-      padding:5px;
+      /* padding:5px; */
       display: table;
       clear:both;
     }
@@ -211,7 +211,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
   <div class="content">
     <div class="content-left">
 
-      <div class="news-content-box">
+      <article class="news-content-box">
         <div class="news-header">Final Fantasy Announces New Expansion: Dawntrail
         </div>
         <div class="news-content"><p>Hit game, Final Fantasy XIV, the critically acclaimed MMORPG has recently released news on a new expansion to it's story titled Dawntrail. Following the events of Endwalker, the Warrior of Light now seeks to go to the western content and explore new lands.</p>
@@ -222,7 +222,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
         </div>
         <div class="news-footer">Posted by: Joe Smith | Posted 02/09/24 | Filed Under: Final Fantasy XIV, MMORPG, PC News
         </div>
-      </div>
+      </article>
 
     <div class="news-content-box">
         <div class="news-header">NVidia Releases New GFX Card!
