--- a/gaming.html
+++ b/gaming.html
@@ -122,7 +122,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       background-color:white;
       border:solid 1px gray;
       width:95%;
-      margin: 0 0 5px;
+      margin: 0 auto 5px auto;
       /* padding:5px; */
       display: table;
       clear:both;
