--- a/gaming.html
+++ b/gaming.html
@@ -211,8 +211,10 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
   <div class="content">
     <div class="content-left">
 
+      <h1>News</h1>
+
       <article class="news-content-box">
-        <div class="news-header">Final Fantasy Announces New Expansion: Dawntrail
+        <div class="news-header"><h2>Final Fantasy Announces New Expansion: Dawntrail</h2>
         </div>
         <div class="news-content"><p>Hit game, Final Fantasy XIV, the critically acclaimed MMORPG has recently released news on a new expansion to it's story titled Dawntrail. Following the events of Endwalker, the Warrior of Light now seeks to go to the western content and explore new lands.</p>
         
@@ -225,7 +227,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       </article>
 
     <div class="news-content-box">
-        <div class="news-header">NVidia Releases New GFX Card!
+        <div class="news-header"><h2>NVidia Releases New GFX Card!</h2>
         </div>
         <div class="news-content"><p>Nulla facilisi. Morbi ultrices diam nec elit vestibulum, nec vehicula erat maximus. Vivamus
           rutrum semper tristique. Duis quam enim, dapibus sed lacus vestibulum, elementum volutpat felis. Donec ipsum lacus,
@@ -240,7 +242,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       </div>
 
     <div class="news-content-box">
-        <div class="news-header">Nintendo Switch 2 Coming out soon? Don't expect it.
+        <div class="news-header"><h2>Nintendo Switch 2 Coming out soon? Don't expect it.</h2>
         </div>
         <div class="news-content"><p>Quisque semper ultrices velit ac convallis. Donec sed justo mollis, blandit ipsum vitae,
           ultricies nulla. Cras eu ligula a purus varius convallis. Nullam facilisis erat arcu, sed eleifend nibh cursus nec.
