--- a/gaming.html
+++ b/gaming.html
@@ -31,6 +31,13 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       height:150px;
     }
 
+    .header-content{
+      background-color:white;
+      border:solid 1px gray;
+      width:80%;
+      margin:auto;
+    }
+
     /* Navigation */
     
     nav {
@@ -139,8 +146,10 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       color:white;
     }
 
-    .news-header{
-      font-size:16px;
+    .news-header h2{
+      font-size:22px;
+      padding:5px;
+      margin:auto;
     }
 
     .news-content{
@@ -166,9 +175,9 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
 
 <body>
 
-<div class="main-content">
+<div class="header">
 
-  <div class="header">Simple header for now.</div>
+  <div class="header-content">Simple header for now.</div>
 
   <nav>
     <ul>
@@ -207,6 +216,9 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
       </li>
     </ul>
   </nav>
+
+</div>
+<div class="main-content">
 
   <div class="content">
     <div class="content-left">
