--- a/gaming.html
+++ b/gaming.html
@@ -32,10 +32,11 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
     }
 
     .header-content{
-      background-color:white;
+      /* background-color:white; */
       border:solid 1px gray;
       width:80%;
       margin:auto;
+      height:100px;
     }
 
     /* Navigation */
@@ -94,6 +95,12 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
     
     nav ul li:hover ul {
       display:block;
+    }
+
+    /* Advertisement */
+
+    .header-ad-block {
+      height:250px;
     }
 
     /* Content */
@@ -219,6 +226,8 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
 
 </div>
 <div class="main-content">
+
+  <div class="header-ad-block"></div>
 
   <div class="content">
     <div class="content-left">
