--- a/gaming.html
+++ b/gaming.html
@@ -265,19 +265,19 @@ function showDivs(n) {
 </div>
 
         <div class="w3-content" style="width:95%">
-          <img class="mySlides" src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;display:none">
-          <img class="mySlides" src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%">
-          <img class="mySlides" src="https://i.imgur.com/J4eSYpp.jpg" style="width:100%;display:none">
+          <img class="mySlides" src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;display:none">
+          <img class="mySlides" src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%">
+          <img class="mySlides" src="https://i.imgur.com/J4eSYpp.jpg" style="width:25%;display:none">
         
           <div class="w3-row-padding w3-section">
             <div class="w3-col s4">
-              <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;cursor:pointer" onclick="currentDiv(1)">
+              <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;cursor:pointer" onclick="currentDiv(1)">
             </div>
             <div class="w3-col s4">
-              <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/8rGoB4P.jpg" onclick="currentDiv(2)">
+              <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%;cursor:pointer" onclick="currentDiv(2)">
             </div>
             <div class="w3-col s4">
-              <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/J4eSYpp.jpg" style="width:100%;cursor:pointer" onclick="currentDiv(3)">
+              <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/J4eSYpp.jpg" style="width:25%;cursor:pointer" onclick="currentDiv(3)">
             </div>
           </div>
         </div>
