--- a/gaming.html
+++ b/gaming.html
@@ -259,12 +259,12 @@ function showDivs(n) {
 
 <!-- Slideshow-->
 
-      <div class="w3-container">
+      <div class="w3-container" style="display:table-row;">
   <h2>Slideshow Indicators</h2>
   <p>Using images to indicate how many slides there are in the slideshow, and highlight the image the user is currently viewing.</p>
 </div>
 
-        <div class="w3-content" style="width:95%">
+        <div class="w3-content" style="width:95%;">
           <img class="mySlides" src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;display:none">
           <img class="mySlides" src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%">
           <img class="mySlides" src="https://i.imgur.com/J4eSYpp.jpg" style="width:25%;display:none">
