--- a/gaming.html
+++ b/gaming.html
@@ -259,7 +259,9 @@ function showDivs(n) {
 
 <!-- Slideshow-->
 
-      <div class="w3-container" style="display:table-row;">
+      <!-- I'M GONNA MAKE THE STYLES IN THE CSS ABOVE. I'M LAZY RN.
+    
+    <div class="w3-container" style="display:table-row;">
   <h2>Slideshow Indicators</h2>
   <p>Using images to indicate how many slides there are in the slideshow, and highlight the image the user is currently viewing.</p>
 </div>
@@ -280,7 +282,7 @@ function showDivs(n) {
               <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/J4eSYpp.jpg" style="width:25%;cursor:pointer" onclick="currentDiv(3)">
             </div>
           </div>
-        </div>
+        </div> -->
 
        <!-- End Slideshow-->
 
@@ -346,6 +348,7 @@ function showDivs(n) {
        <!-- Right Navigation -->
       <div class="content-right-news-box">
         <!-- img here -->
+        <img src="https://i.imgur.com/DRciR0h.jpg" style="width:95%; height:75px;">
         <h3>Diablo III Tips and Tricks</h3>
 
       <!--End Right Navigation -->
