--- a/gaming.html
+++ b/gaming.html
@@ -40,7 +40,8 @@ function showDivs(n) {
       margin:0;
       font-family:'tahoma';
       background-color:lightgray;
-      
+      background-image:url("https://i.imgur.com/8rGoB4P.jpg");
+      box-shadow: 0 0 8px 8px lightgray inset;
     }
 
     .main-content{
@@ -348,7 +349,7 @@ function showDivs(n) {
        <!-- Right Navigation -->
       <div class="content-right-news-box">
         <!-- img here -->
-        <img src="https://i.imgur.com/DRciR0h.jpg" style="width:95%; height:75px;">
+        <img src="https://i.imgur.com/DRciR0h.jpg" style="width:95%; height:75px; margin:auto;">
         <h3>Diablo III Tips and Tricks</h3>
 
       <!--End Right Navigation -->
