--- a/gaming.html
+++ b/gaming.html
@@ -99,6 +99,8 @@ function showDivs(n) {
       display:inline-block;
       color:white;
       text-decoration:none;
+      border-radius: 5px;
+      background-color: rgba(89, 12, 12, 0.75); 
     }
     
     nav ul li a:hover {
