--- a/gaming.html
+++ b/gaming.html
@@ -221,22 +221,22 @@ function showDivs(n) {
   <nav>
     <ul>
       <li><a href="#">Home</a></li>
-      <li><a href="#" class=".nav-main-a">Nintendo</a>
+      <li><a href="#" class="nav-main-a">Nintendo</a>
         <ul>
           <li><a href="#">Nintendo News</a></li>
           <li><a href="#">Nintendo Games</a></li>
         </ul>
-      <li><a href="#" class=".nav-main-a">Playstation</a>
+      <li><a href="#" class="nav-main-a">Playstation</a>
          <ul>
           <li><a href="#">PlayStation News</a></li>
           <li><a href="#">Playstation Games</a></li>
         </ul>
-      <li><a href="#" class=".nav-main-a">Xbox</a>
+      <li><a href="#" class="nav-main-a">Xbox</a>
         <ul>
           <li><a href="#">Xbox News</a></li>
           <li><a href="#">Xbox Games</a></li>
         </ul>
-      <li><a href="#" class=".nav-main-a">PC</a>
+      <li><a href="#" class="nav-main-a">PC</a>
         <ul>
           <li><a href="#">PC News</a></li>
           <li><a href="#">PC Games</a></li>
