--- a/gaming.html
+++ b/gaming.html
@@ -65,6 +65,12 @@ function showDivs(n) {
       height:100px;
     }
 
+    .header-logo{
+      color:white;
+      text-shadow: 4px 4px 0px rgba(0,0,0,1);
+      font-size:42px;
+    }
+
     /* Navigation */
     
     nav {
@@ -216,7 +222,7 @@ function showDivs(n) {
 
 <div class="header">
 
-  <div class="header-content">Simple header for now.</div>
+  <div class="header-content"><span class="header-logo">Simple header for now.</span></div>
 
   <nav>
     <ul>
