--- a/gaming.html
+++ b/gaming.html
@@ -8,6 +8,13 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+
+<!-- Fonts -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
+<!-- End Fonts -->
+  
 <title>Gaming News Network</title>
 
   <script>
@@ -69,6 +76,7 @@ function showDivs(n) {
       color:white;
       text-shadow: 4px 4px 0px rgba(0,0,0,1);
       font-size:42px;
+      font-family: "Fjalla One", Tahoma, sans-serif;
     }
 
     /* Navigation */
@@ -222,7 +230,7 @@ function showDivs(n) {
 
 <div class="header">
 
-  <div class="header-content"><span class="header-logo">Simple header for now.</span></div>
+  <div class="header-content"><span class="header-logo">Gaming News Network</span></div>
 
   <nav>
     <ul>
