--- a/gaming.html
+++ b/gaming.html
@@ -77,6 +77,10 @@ function showDivs(n) {
       text-shadow: 4px 4px 0px rgba(0,0,0,1);
       font-size:42px;
       font-family: "Fjalla One", Tahoma, sans-serif;
+      background-color: rgba(89, 12, 12, 0.75);
+      border-radius: 5px;
+      padding: 10px;
+      margin-top:5px;
     }
 
     /* Navigation */
