--- a/gaming.html
+++ b/gaming.html
@@ -226,6 +226,25 @@ function showDivs(n) {
       padding:5px;
       display: table;
     }
+
+    .content-right-header {
+      background: rgb(89,12,12);
+      background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
+      border:solid 1px black;
+      width:95%;
+      margin:auto;
+      padding:10px;
+      display: table-row;
+      color:white;
+    }
+
+    content-right-list-box{
+      border-bottom:dashed 1px black;
+      width:95%;
+      margin:auto;
+      padding:10px;
+      display: table-row;
+    }
     
   </style>
 </head>
@@ -375,6 +394,17 @@ function showDivs(n) {
         <!-- img here -->
         <img src="https://i.imgur.com/DRciR0h.jpg" style="width:95%; height:75px; margin:auto;">
         <h3>Diablo III Tips and Tricks</h3>
+
+      <div class="content-right-header"><h4>Movies, TV, Comics, Tech</h4></div>
+
+      <div class="content-right-list-box">
+      <ul>
+        <li><a href="#">Sonic 3 Movie Trailer</a></li>
+        <li><a href="#">New Superman Comic</a></li>
+        <li><a href="#">New Season of Hell's Kitchen</a></li>
+        <li><a href="#">Intel releases new CPU</a></li>
+      </ul>
+      </div>
 
       <!--End Right Navigation -->
       </div>
