--- a/gaming.html
+++ b/gaming.html
@@ -238,12 +238,17 @@ function showDivs(n) {
       color:white;
     }
 
-    content-right-list-box{
+    .content-right-list-box{
       border-bottom:dashed 1px black;
       width:95%;
       margin:auto;
       padding:10px;
       display: table-row;
+    }
+
+    .content-right-list-box h4{
+      padding:5px;
+      margin:auto;
     }
     
   </style>
@@ -396,7 +401,6 @@ function showDivs(n) {
         <h3>Diablo III Tips and Tricks</h3>
 
       <div class="content-right-header"><h4>Movies, TV, Comics, Tech</h4></div>
-
       <div class="content-right-list-box">
       <ul>
         <li><a href="#">Sonic 3 Movie Trailer</a></li>
@@ -407,7 +411,6 @@ function showDivs(n) {
       </div>
 
       <!--End Right Navigation -->
-      </div>
       
     </div>
   
