--- a/gaming.html
+++ b/gaming.html
@@ -246,7 +246,7 @@ function showDivs(n) {
       display: table-row;
     }
 
-    .content-right-list-box h4{
+    .content-right-header h4{
       padding:5px;
       margin:auto;
     }
@@ -399,6 +399,7 @@ function showDivs(n) {
         <!-- img here -->
         <img src="https://i.imgur.com/DRciR0h.jpg" style="width:95%; height:75px; margin:auto;">
         <h3>Diablo III Tips and Tricks</h3>
+      </div>
 
       <div class="content-right-header"><h4>Movies, TV, Comics, Tech</h4></div>
       <div class="content-right-list-box">
