--- a/gaming.html
+++ b/gaming.html
@@ -235,6 +235,16 @@ function showDivs(n) {
       float: right;
     }
 
+    .more-articles a {
+    background: #3a3939;
+    color: #fff;
+    border-left: 12px solid #d32028;
+    padding: 2px 10px;
+    width: 108px;
+    float: left;
+    line-height: 24px;
+    }
+
     .content-right-news-box{
       background-color:gray;
       border:solid 1px darkgray;
