--- a/gaming.html
+++ b/gaming.html
@@ -58,7 +58,7 @@ function showDivs(n) {
       margin:auto;
     }
 
-    .header{
+    .header, .footer{
       background: rgb(89,12,12);
       background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
       height:150px;
@@ -70,6 +70,14 @@ function showDivs(n) {
       width:80%;
       margin:auto;
       height:100px;
+    }
+
+    .footer-content{
+      /* background-color:white; */
+      /* border:solid 1px gray; */
+      width:80%;
+      margin:auto;
+      height:300px;
     }
 
     .header-logo{
@@ -453,6 +461,18 @@ function showDivs(n) {
       <!--End Right Navigation -->
       
     </div>
+
+<div class="footer">
+
+  <div class="footer-content">
+
+    <p>By continuing past this page, and by your continued use of this site, you agree to be bound by and abide by the User Agreement.</p>
+
+    <p>Copyright 2024, Gaming News Network.</p>
+    
+  </div>
+
+</div>
   
 </div>
 
