--- a/gaming.html
+++ b/gaming.html
@@ -79,6 +79,7 @@ function showDivs(n) {
       width:80%;
       margin:auto;
       height:300px;
+      color:white;
     }
 
     .header-logo{
@@ -344,7 +345,7 @@ function showDivs(n) {
 
 <!-- Slideshow-->
 
-      <!-- I'M GONNA MAKE THE STYLES IN THE CSS ABOVE. I'M LAZY RN.
+      <!-- I'M GONNA MAKE THE STYLES IN THE CSS ABOVE. I'M LAZY RN. -->
     
     <div class="w3-container" style="display:table-row;">
   <h2>Slideshow Indicators</h2>
