--- a/gaming.html
+++ b/gaming.html
@@ -347,7 +347,7 @@ function showDivs(n) {
 
       <!-- I'M GONNA MAKE THE STYLES IN THE CSS ABOVE. I'M LAZY RN. -->
     
-    <div class="w3-container" style="display:table-row;">
+    <div class="w3-container" style="/* display:table-row; */ display: flex; justify-content: space-between;">
   <h2>Slideshow Indicators</h2>
   <p>Using images to indicate how many slides there are in the slideshow, and highlight the image the user is currently viewing.</p>
 </div>
