--- a/gaming.html
+++ b/gaming.html
@@ -368,9 +368,9 @@ function showDivs(n) {
               <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/J4eSYpp.jpg" style="width:25%;cursor:pointer" onclick="currentDiv(3)">
             </div>
           </div>
-        </div> -->
+        </div>
 
-       <!-- End Slideshow-->
+   </div><!-- End Slideshow-->
 
     
     <div class="content-left">
