--- a/gaming.html
+++ b/gaming.html
@@ -293,6 +293,8 @@ function showDivs(n) {
 
 <body>
 
+  Peanuts. lol
+
 <div class="header">
 
   <div class="header-content"><span class="header-logo">Gaming News Network</span></div>
