Removed Slideshow for now

--- a/gaming.html
+++ b/gaming.html
@@ -343,9 +343,10 @@ function showDivs(n) {
 
   <div class="content">
 
-    <!-- Slideshow-->
+    <!-- What if I just got rid of this for now
+    <\!-- Slideshow--\>
 
-      <!-- I'M GONNA MAKE THE STYLES IN THE CSS ABOVE. I'M LAZY RN. -->
+      <\!-- I'M GONNA MAKE THE STYLES IN THE CSS ABOVE. I'M LAZY RN. --\>
     
     <div class="w3-container" style="/* display:table-row; */ display: flex; justify-content: space-between;">
       <h2>Slideshow Indicators</h2>
@@ -369,7 +370,8 @@ function showDivs(n) {
           </div>
         </div>
 
-    </div><!-- End Slideshow-->
+    </div><\!-- End Slideshow--\>
+  -->
 
     
     <div class="content-left">
@@ -475,8 +477,6 @@ function showDivs(n) {
   
   </div><!-- End Content-->
 </div><!-- End Main Content -->
-
-HALP
   
 </body>
 </html>
