--- a/gaming.html
+++ b/gaming.html
@@ -56,6 +56,7 @@ function showDivs(n) {
       border:solid 1px gray;
       width:80%;
       margin:auto;
+      display:table;
     }
 
     .header{
@@ -178,7 +179,7 @@ function showDivs(n) {
       width:100%;
       margin:auto;
       padding:5px;
-      display: table; /*help*/
+      display: table-row; /*help*/
     }
 
     .content-left{
