DOES COLUMNS HELP

--- a/gaming.html
+++ b/gaming.html
@@ -188,7 +188,7 @@ function showDivs(n) {
       width:75%;
       margin:auto;
       padding:5px;
-      display: table-cell;
+      display: table-column;
     }
 
     .content-right{
@@ -197,7 +197,7 @@ function showDivs(n) {
       width:20%;
       margin:auto;
       padding:5px;
-      display: table-cell;
+      display: table-column;
     }
 
     .news-content-box{
@@ -379,9 +379,8 @@ function showDivs(n) {
         </div>
 
     </div><\!-- End Slideshow--\>
-  -->
+    -->
 
-    
     <div class="content-left">
 
        <!-- News Content -->
