--- a/gaming.html
+++ b/gaming.html
@@ -197,7 +197,7 @@ function showDivs(n) {
       width:20%;
       margin:auto;
       padding:5px;
-      display: table-column;
+      display: table-cell;
     }
 
     .news-content-box{
