Stop breaking plz prayge

--- a/gaming.html
+++ b/gaming.html
@@ -63,14 +63,14 @@ function showDivs(n) {
       background: rgb(89,12,12);
       background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
       height:150px;
-      display:table-row;
+      display:table;
     }
 
     .footer{
       background: rgb(89,12,12);
       background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
       height:150px;
-      display:table-row;
+      display:table;
     }
 
     .header-content{
@@ -79,6 +79,7 @@ function showDivs(n) {
       width:80%;
       margin:auto;
       height:100px;
+      display:table-row;
     }
 
     .footer-content{
@@ -88,6 +89,7 @@ function showDivs(n) {
       margin:auto;
       height:300px;
       color:white;
+      display:table-row;
     }
 
     .header-logo{
