--- a/gaming.html
+++ b/gaming.html
@@ -48,6 +48,8 @@ function showDivs(n) {
       font-family:'tahoma';
       background-color:lightgray;
       background-image:url("https://i.imgur.com/8rGoB4P.jpg");
+      background-repeat: no-repeat;
+      background-position: top center;
       box-shadow: 0 0 8px 8px lightgray inset;
     }
 
@@ -63,14 +65,14 @@ function showDivs(n) {
       background: rgb(89,12,12);
       background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
       height:150px;
-      display:table;
+      /* display:table; */
     }
 
     .footer{
       background: rgb(89,12,12);
       background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
       height:150px;
-      display:table;
+      /* display:table; */
     }
 
     .header-content{
@@ -79,7 +81,7 @@ function showDivs(n) {
       width:80%;
       margin:auto;
       height:100px;
-      display:table-row;
+      /* display:table-row; */
     }
 
     .footer-content{
@@ -89,7 +91,7 @@ function showDivs(n) {
       margin:auto;
       height:300px;
       color:white;
-      display:table-row;
+      /* display:table-row; */
     }
 
     .header-logo{
@@ -190,7 +192,7 @@ function showDivs(n) {
       width:75%;
       margin:auto;
       padding:5px;
-      display: table-column;
+      display: table-cell;
     }
 
     .content-right{
