--- a/gaming.html
+++ b/gaming.html
@@ -73,6 +73,7 @@ function showDivs(n) {
       background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
       height:150px;
       /* display:table; */
+      display:table-row;
     }
 
     .header-content{
