--- a/gaming.html
+++ b/gaming.html
@@ -38,6 +38,11 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
 }
 
 .header {
+	display: table-row;
+    width:100%;
+}
+
+.header-content {
 	background: rgb(89,12,12);
     background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
     height:150px;
@@ -186,8 +191,8 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
     <div class="container-page">
 
         <div class="divTableBody">
-        <div class="divTableRow">
-        <div class="divTableCell">
+        <div class="header">
+        <div class="header-content">
             <span class="header-logo">Gaming News Network</span></div>
 
             <nav>
@@ -262,7 +267,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
         <div class="divTableRow">
         <div class="divTableCell">
             <span class="header-logo">Gaming News Network</span>
-            
+
         </div>
         <div class="divTableCell">&nbsp;</div>
         </div><!-- End Footer -->
