See if this fixes what I think it fixes

--- a/gaming.html
+++ b/gaming.html
@@ -238,6 +238,9 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
                     </nav>
                 </div>
             </div><!-- End Header -->
+        </div><!-- End TableBody -->
+        
+        <div class="divTableBody">
 
             <div class="divTableRow">
                 <div class="divTableCell">
