--- a/gaming.html
+++ b/gaming.html
@@ -37,7 +37,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
 	padding: 3px 10px;
 }
 
-.header {
+.header, .footer {
 	display: table-row;
     width:100%;
 }
@@ -46,6 +46,14 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
 	background: rgb(89,12,12);
     background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
     height:150px;
+	display: table-cell;
+	padding: 3px 10px;
+}
+
+.footer-content {
+	background: rgb(89,12,12);
+    background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
+    height:300px;
 	display: table-cell;
 	padding: 3px 10px;
 }
@@ -239,7 +247,7 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
                 </div>
             </div><!-- End Header -->
         </div><!-- End TableBody -->
-        
+
         <div class="divTableBody">
 
             <div class="divTableRow">
@@ -275,8 +283,8 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
                 </div>
             </div><!-- End Main Content -->
 
-            <div class="divTableRow">
-            <div class="divTableCell">
+            <div class="footer">
+            <div class="footer-content">
                 <span class="header-logo">Gaming News Network</span>
 
             </div>
