--- a/gaming.html
+++ b/gaming.html
@@ -17,6 +17,16 @@ background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, 
 
 <style>
 
+body{
+    margin:0;
+    font-family:'tahoma', Arial, Helvetica, sans-serif;
+    background-color:lightgray;
+    background-image:url("https://i.imgur.com/8rGoB4P.jpg");
+    background-repeat:no-repeat;
+    background-position: top center;
+    box-shadow: 0 0 8px 8px lightgray inset;
+}
+
 .container-page{
 	display: table;
 	width: 100%;
