--- a/gaming.html
+++ b/gaming.html
@@ -79,6 +79,13 @@ body{
       margin-top:5px;
     }
 
+.content {
+    background-color:#EEE;
+	border: 1px solid #999999;
+	display: table-cell;
+	padding: 3px 10px;
+}
+
 .divTableHeading {
 	background-color: #EEE;
 	display: table-header-group;
@@ -163,6 +170,7 @@ body{
 
     .header-ad-block {
       height:250px;
+      display: table-cell;
     }
 
 /* Back up
@@ -261,13 +269,13 @@ body{
         <div class="divTableBody">
 
             <div class="divTableRow">
-                <div class="divTableCell">
+                <div class="header-ad-block">
                     
                 </div>
             </div><!-- End Advertisement background -->
 
             <div class="divTableRow">
-                <div class="divTableCell">
+                <div class="content">
                     <h1>News</h1>
                 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam molestie urna nunc, quis luctus nulla varius eget.
