Fixed Content Area

--- a/gaming.html
+++ b/gaming.html
@@ -83,7 +83,7 @@ body{
 .content {
     background-color:#EEE;
 	border: 1px solid #999999;
-	display: table-cell;
+	display: table-row;
 	padding: 3px 10px;
     width:80%;
 }
@@ -276,8 +276,8 @@ body{
                 </div>
             </div><!-- End Advertisement background -->
 
-            <div class="divTableRow">
-                <div class="content">
+            <div class="content">
+                <div class="divTableCell">
                     <h1>News</h1>
                 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam molestie urna nunc, quis luctus nulla varius eget.
