Header and Content Bodies added

--- a/gaming.html
+++ b/gaming.html
@@ -175,6 +175,18 @@ body{
       display: table-cell;
     }
 
+    /* Table Bodies */
+
+    .header-body {
+	display: table-row-group;
+    width:100%;
+}
+
+    .content-body {
+	display: table-row-group;
+    width:80%;
+}
+
 /* Back up
 
 .divTable{
@@ -218,7 +230,7 @@ body{
 
     <div class="container-page">
 
-        <div class="divTableBody">
+        <div class="header-body">
 
             <div class="header">
                 <div class="header-content">
@@ -268,7 +280,7 @@ body{
             </div><!-- End Header -->
         </div><!-- End TableBody -->
 
-        <div class="divTableBody">
+        <div class="content-body">
 
             <div class="divTableRow">
                 <div class="header-ad-block">
