Content Left and Content Right Added

--- a/gaming.html
+++ b/gaming.html
@@ -88,6 +88,18 @@ body{
     width:80%;
 }
 
+.content-left {
+	display: table-cell;
+	padding: 3px 10px;
+    width:80%;
+}
+
+.content-right {
+	display: table-cell;
+	padding: 3px 10px;
+    width:20%;
+}
+
 .divTableHeading {
 	background-color: #EEE;
 	display: table-header-group;
@@ -289,7 +301,7 @@ body{
             </div><!-- End Advertisement background -->
 
             <div class="content">
-                <div class="divTableCell">
+                <div class="content-left">
                     <h1>News</h1>
                 
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam molestie urna nunc, quis luctus nulla varius eget.
@@ -310,7 +322,7 @@ body{
                     rutrum convallis. Donec convallis purus quis commodo scelerisque. Mauris gravida neque vitae ante iaculis ullamcorper.
                     Nullam ut sapien sit amet enim tempus fermentum. Fusce tortor tortor, suscipit id sapien nec, faucibus fermentum risus. </p>
                 </div>
-                <div class="divTableCell">
+                <div class="content-right">
                     <p>Right Navigation</p>
                 </div>
             </div><!-- End Main Content -->
