Container Header and Container Page

--- a/gaming.html
+++ b/gaming.html
@@ -27,9 +27,15 @@ body{
     box-shadow: 0 0 8px 8px lightgray inset;
 }
 
-.container-page{
+.container-header{
 	display: table;
 	width: 100%;
+    margin:auto;
+}
+
+.container-page{
+	display: table;
+	width: 80%;
     margin:auto;
 }
 
@@ -240,7 +246,7 @@ body{
 
 <body>
 
-    <div class="container-page">
+    <div class="container-header">
 
         <div class="header-body">
 
@@ -291,6 +297,10 @@ body{
                 </div>
             </div><!-- End Header -->
         </div><!-- End TableBody -->
+
+    </div>
+
+    <div class="container-page"></div>
 
         <div class="content-body">
 
