--- a/gaming.html
+++ b/gaming.html
@@ -298,9 +298,9 @@ body{
             </div><!-- End Header -->
         </div><!-- End TableBody -->
 
-    </div>
+    </div><!-- End Container -->
 
-    <div class="container-page"></div>
+    <div class="container-page">
 
         <div class="content-body">
 
