Reimplement Slideshow Soon

--- a/gaming.html
+++ b/gaming.html
@@ -90,8 +90,8 @@ body{
     background-color:#EEE;
 	border: 1px solid #999999;
 	display: table-row;
-	padding: 3px 10px;
-    width:80%;
+	/* padding: 3px 10px;
+    width:80%; */
 }
 
 .content-left {
@@ -193,7 +193,7 @@ body{
       display: table-cell;
     }
 
-    /* Table Bodies */
+/* Table Bodies */
 
     .header-body {
 	display: table-row-group;
@@ -203,6 +203,14 @@ body{
     .content-body {
 	display: table-row-group;
     width:80%;
+}
+
+/* Slideshow */
+
+.slideshow-content {
+    background-color:#EEE;
+	border: 1px solid blue;
+	display: table-row;
 }
 
 /* Back up
@@ -298,9 +306,7 @@ body{
             </div><!-- End Header -->
         </div><!-- End TableBody -->
 
-    </div><!-- End Container -->
-
-    <div class="container-page">
+    <!-- <div class="container-page"> Wrong Spot? -->
 
         <div class="content-body">
 
@@ -310,6 +316,14 @@ body{
                 </div>
             </div><!-- End Advertisement background -->
 
+    </div><!-- End Container -->
+
+    <div class="container-page">
+            <div class="slideshow-content">
+                <div class="divTableCell">
+                    WHACKA WHACKA
+                </div>
+            </div>
             <div class="content">
                 <div class="content-left">
                     <h1>News</h1>
