--- a/gaming.html
+++ b/gaming.html
@@ -324,6 +324,10 @@ body{
                     WHACKA WHACKA
                 </div>
             </div>
+
+    </div><!-- End Container -->
+
+    <div class="container-page">
             <div class="content">
                 <div class="content-left">
                     <h1>News</h1>
