--- a/gaming.html
+++ b/gaming.html
@@ -67,10 +67,15 @@ body{
 	padding: 3px 10px;
 }
 
-.footer-content {
-	background: rgb(89,12,12);
+.footer {
+    background: rgb(89,12,12);
     background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
     height:300px;
+    width:100%;
+    display: table-row;
+}
+
+.footer-content {
 	display: table-cell;
 	padding: 3px 10px;
 }
