--- a/gaming.html
+++ b/gaming.html
@@ -67,6 +67,21 @@ body{
 	padding: 3px 10px;
 }
 
+.header-logo{
+      color:white;
+      text-shadow: 4px 4px 0px rgba(0,0,0,1);
+      font-size:42px;
+      font-family: "Fjalla One", Tahoma, sans-serif;
+      background-color: rgba(89, 12, 12, 0.75);
+      border-radius: 5px;
+      padding: 10px;
+      margin-top:5px;
+}
+
+.nav-cell {
+	display: table-cell;
+}
+
 .footer {
     background: rgb(89,12,12);
     background: linear-gradient(180deg, rgba(89,12,12,1) 0%, rgba(175,20,20,1) 30%, rgba(224,69,69,1) 100%);
@@ -80,16 +95,7 @@ body{
 	padding: 3px 10px;
 }
 
-.header-logo{
-      color:white;
-      text-shadow: 4px 4px 0px rgba(0,0,0,1);
-      font-size:42px;
-      font-family: "Fjalla One", Tahoma, sans-serif;
-      background-color: rgba(89, 12, 12, 0.75);
-      border-radius: 5px;
-      padding: 10px;
-      margin-top:5px;
-    }
+
 
 .content {
     background-color:#EEE;
@@ -269,7 +275,7 @@ body{
                 </div>
             </div>
             <div class="divTableRow">
-                <div class="divTableCell">
+                <div class="nav-cell">
                     <nav>
                         <ul>
                         <li><a href="#">Home</a></li>
