--- a/gaming.html
+++ b/gaming.html
@@ -65,6 +65,9 @@ body{
     height:150px;
 	display: table-cell;
 	padding: 3px 10px;
+    /* Change Below */
+    width:80%;
+    margin:auto;
 }
 
 .header-logo{
@@ -94,8 +97,6 @@ body{
 	display: table-cell;
 	padding: 3px 10px;
 }
-
-
 
 .content {
     background-color:#EEE;
