--- a/gaming.html
+++ b/gaming.html
@@ -67,7 +67,7 @@ body{
 	padding: 3px 10px;
     /* Change Below */
     width:80%;
-    margin:auto;
+    /* margin:auto; */
 }
 
 .header-logo{
@@ -272,7 +272,7 @@ body{
 
             <div class="header">
                 <div class="header-content">
-                    <span class="header-logo">Gaming News Network</span>
+                    <div style="width:80%; margin:auto;"><span class="header-logo">Gaming News Network</span></div>
                 </div>
             </div>
             <div class="divTableRow">
