--- a/gaming.html
+++ b/gaming.html
@@ -96,6 +96,7 @@ body{
 .footer-content {
 	display: table-cell;
 	padding: 3px 10px;
+    width:50%;
 }
 
 .content {
@@ -368,11 +369,12 @@ body{
             </div><!-- End Main Content -->
 
             <div class="footer">
-            <div class="footer-content">
+                <div class="footer-content">
                 <span class="header-logo">Gaming News Network</span>
 
-            </div>
-                <div class="divTableCell">Copyright stuff.</div>
+                </div>
+                <div class="footer-content">Copyright stuff.
+                </div>
             </div><!-- End Footer -->
 
         </div><!-- End TableBody -->
