--- a/gaming.html
+++ b/gaming.html
@@ -335,6 +335,31 @@ body{
             <div class="slideshow-content">
                 <div class="divTableCell">
                     WHACKA WHACKA
+
+                    <!-- Slideshow -->
+                    <div class="w3-container" style="/* display:table-row; */ display: flex; justify-content: space-between;">
+                        <h2>Slideshow Indicators</h2>
+                        <p>Using images to indicate how many slides there are in the slideshow, and highlight the image the user is currently viewing.</p>
+                  
+                          <div class="w3-content" style="width:95%;">
+                            <img class="mySlides" src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;display:none">
+                            <img class="mySlides" src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%;">
+                            <img class="mySlides" src="https://i.imgur.com/J4eSYpp.jpg" style="width:25%;display:none">
+                          
+                            <div class="w3-row-padding w3-section">
+                              <div class="w3-col s4">
+                                <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;cursor:pointer;" onclick="currentDiv(1)">
+                              </div>
+                              <div class="w3-col s4">
+                                <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%;cursor:pointer;" onclick="currentDiv(2)">
+                              </div>
+                              <div class="w3-col s4">
+                                <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/J4eSYpp.jpg" style="width:25%;cursor:pointer;" onclick="currentDiv(3)">
+                              </div>
+                            </div>
+                          </div>
+                    </div><!-- End Slideshow -->
+
                 </div>
             </div>
 
