Make sure my file is correct.

--- a/gaming.html
+++ b/gaming.html
@@ -334,7 +334,7 @@ body{
     <div class="container-page">
             <div class="slideshow-content">
                 <div class="divTableCell">
-                    WHACKA WHACKA
+                    WHACKA WHACKA esdewrfewfew
 
                     <!-- Slideshow -->
                     <div class="w3-container" style="/* display:table-row; */ display: flex; justify-content: space-between;">
