--- a/gaming.html
+++ b/gaming.html
@@ -344,7 +344,7 @@ body{
                             <img class="mySlides" src="https://i.imgur.com/J4eSYpp.jpg" style="width:25%;display:none">
                           
                             <div class="w3-row-padding w3-section">
-                              <div class="w3-col s4">
+                              <div class="w3-col s4" style="padding:5px; background-color:black;">
                                 <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;cursor:pointer;" onclick="currentDiv(1)">
                               </div>
                               <div class="w3-col s4">
