--- a/gaming.html
+++ b/gaming.html
@@ -226,6 +226,32 @@ body{
 	display: table-row;
 }
 
+.w3-content {
+  /* max-width: 980px; */ 
+}
+
+.w3-section, .w3-code {
+  margin-top: 16px !important;
+  margin-bottom: 16px !important;
+}
+
+.w3-row-padding, .w3-row-padding > .w3-half, .w3-row-padding > .w3-third, .w3-row-padding > .w3-twothird, .w3-row-padding > .w3-threequarter, .w3-row-padding > .w3-quarter, .w3-row-padding > .w3-col {
+  padding: 0 8px;
+}
+
+.w3-col.s4 {
+  width: 33.33333%;
+}
+
+.w3-opacity, .w3-hover-opacity:hover {
+  opacity: 0.60;
+}
+
+img {
+  vertical-align: middle;
+  border-style: none;
+}
+
 /* Back up
 
 .divTable{
