--- a/gaming.html
+++ b/gaming.html
@@ -362,7 +362,7 @@ img {
                 <div class="divTableCell">
 
                     <!-- Slideshow -->
-                    <div class="w3-container" style="/* display:table-row; */ display: flex; justify-content: space-between;">
+                    <div class="w3-container">
                   
                           <div class="w3-content" style="width:95%;">
                             <img class="mySlides" src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;display:none">
