--- a/gaming.html
+++ b/gaming.html
@@ -230,6 +230,11 @@ body{
   /* max-width: 980px; */ 
 }
 
+.w3-content, .w3-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .w3-section, .w3-code {
   margin-top: 16px !important;
   margin-bottom: 16px !important;
@@ -364,20 +369,20 @@ img {
                     <!-- Slideshow -->
                     <div class="w3-container">
                   
-                          <div class="w3-content" style="width:95%;">
+                          <div class="w3-content" style="max-width:1200px;">
                             <img class="mySlides" src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;display:none">
                             <img class="mySlides" src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%;">
                             <img class="mySlides" src="https://i.imgur.com/J4eSYpp.jpg" style="width:25%;display:none">
                           
                             <div class="w3-row-padding w3-section">
                               <div class="w3-col s4" style="padding:5px; background-color:black;">
-                                <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/DRciR0h.jpg" style="width:25%;cursor:pointer;" onclick="currentDiv(1)">
+                                <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/DRciR0h.jpg" style="width:100%;cursor:pointer;" onclick="currentDiv(1)">
                               </div>
                               <div class="w3-col s4">
-                                <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/8rGoB4P.jpg" style="width:25%;cursor:pointer;" onclick="currentDiv(2)">
+                                <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/8rGoB4P.jpg" style="width:100%;cursor:pointer;" onclick="currentDiv(2)">
                               </div>
                               <div class="w3-col s4">
-                                <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/J4eSYpp.jpg" style="width:25%;cursor:pointer;" onclick="currentDiv(3)">
+                                <img class="demo w3-opacity w3-hover-opacity-off" src="https://i.imgur.com/J4eSYpp.jpg" style="width:100%;cursor:pointer;" onclick="currentDiv(3)">
                               </div>
                             </div>
                           </div>
