Cleaning code since I noticed errors.

--- a/gaming.html
+++ b/gaming.html
@@ -311,7 +311,7 @@ body{
             </div><!-- End Header -->
         </div><!-- End TableBody -->
 
-    <!-- <div class="container-page"> Wrong Spot? -->
+        <!-- <div class="container-page"> Wrong Spot? -->
 
         <div class="content-body">
 
@@ -321,9 +321,11 @@ body{
                 </div>
             </div><!-- End Advertisement background -->
 
-    </div><!-- End Container -->
+        </div><!-- End Advertisement Container -->
 
-    <!-- Slidehow here -->
+    </div><!-- END ALL HEADERS -->
+    
+        <!-- Slidehow here -->
 
     <div class="container-page">
             <div class="content">
@@ -362,9 +364,7 @@ body{
                 </div>
             </div><!-- End Footer -->
 
-        </div><!-- End TableBody -->
-
-    </div><!-- End Container -->      
+    </div><!-- End Container Page -->
     
 </body>
 </html>
