--- a/landing-page.html
+++ b/landing-page.html
@@ -4,11 +4,47 @@
     <meta charset="UTF-8">
     <title>Landing Page</title>
 
-<style>
-</style>
+    <style >
+      .flex-container{
+        background-color:lightblue;
+        padding:16px;
+        border:4px solid blue;
+        margin:8px;
+        display:flex
+      }
+
+      .flex-item{
+        background-color:peachpuff;
+        border:4px solid salmon;
+        height:48px;
+        flex:1;
+        padding:4px;
+      }
+
+      .flex-item-container{
+        display:flex;
+      }
+
+      .flex-item-links{
+        background-color:lightgreen;
+        border:4px solid green;
+        padding:4px;
+      }
+
+    </style>
 
   </head>
 
   <body>
+
+    <div class="flex-container">
+      <div class="flex-item">Header Logo</div>
+      <div class="flex-item flex-item-container">
+        <div class="flex-item-links">header link one</div>
+        <div class="flex-item-links">header link two</div>
+        <div class="flex-item-links">header link three</div>
+      </div>
+    </div>
+
   </body>
 </html>
