--- a/landing-page.html
+++ b/landing-page.html
@@ -10,7 +10,8 @@
         padding:16px;
         border:4px solid blue;
         margin:8px;
-        display:flex
+        display:flex;
+        justify-content: space-between;
       }
 
       .flex-item{
@@ -23,6 +24,7 @@
 
       .flex-item-container{
         display:flex;
+        justify-content: space-between;
       }
 
       .flex-item-links{
